# pi-pico-ov767X

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  camera-io.pio  flake.nix
docs/html/: annotated.html  annotated_dup.js  camera_8c.html  camera_8c.js  camera_8h.html  camera_8h.js  camera_8h_source.html  camera__regs_8h.html  camera__regs_8h.js  camera__regs_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_ca3b66a678617337cce407df9f5548c5.html  dir_ca3b66a678617337cce407df9f5548c5.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  sccb_8h.html  sccb_8h.js  sccb_8h_source.html  structCameraClock__OV767X-members.html  structCameraClock__OV767X.html  structCameraClock__OV767X.js  structCamera__OV767X-members.html  structCamera__OV767X.html  structCamera__OV767X.js  structInitArgs__OV767X-members.html  structInitArgs__OV767X.html  (+4 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
docs/man/man3/: CameraClock_OV767X.3  Camera_OV767X.3  InitArgs_OV767X.3  SCCB_OV767X.3  camera.c.3  camera.h.3  camera_regs.h.3  sccb.h.3
docs/rtf/: refman.rtf
example/capture-frame-uart/: CMakeLists.txt  main.cpp
example/udp-stream/: CMakeLists.txt  lwipopts.h  main.c
example/udp-stream/client/: Makefile  client.cpp  flake.nix
include/pi-pico-ov767X/: camera.h  camera_regs.h  sccb.h
src/: camera.c  camera_regs.c  pi-pico-ov767X.c  sccb.c
